--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,4 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+    {memory_pager, {git, "https://github.com/davebryson/memory_pager.git", {branch, "master"}}}
+]}.
